Archive2/e0/12a2c9c4edf32d/output
main.cpp: In function 'int main()':
main.cpp:71:44: error: invalid static_cast from type 'Final (*)()' to type 'Base*'
     Base* pBase = static_cast<Base*>(&final);
                                            ^
